--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 {% extends "_base.html" %}
 {% block bodycontent %}  
 
-    
-    
  <!-- /.container -->
     <div class="container">
 
@@ -66,11 +64,46 @@
                 </a>
             </div>
 
+            <div class="col-sm-3 col-xs-6">
+                <a href="#">
+                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300">
+                </a>
+            </div>
+        </div>
+
+        <div class="row">
+
+            <div class="col-lg-12">
+                <h3 class="page-header">Related Projects</h3>
+            </div>
+
+            <div class="col-sm-3 col-xs-6">
+                <a href="#">
+                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300">
+                </a>
+            </div>
+
+            <div class="col-sm-3 col-xs-6">
+                <a href="#">
+                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300">
+                </a>
+            </div>
+
+            <div class="col-sm-3 col-xs-6">
+                <a href="#">
+                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300">
+                </a>
+            </div>
+
+            <div class="col-sm-3 col-xs-6">
+                <a href="#">
+                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300">
+                </a>
+            </div>
+
         </div>
 
     </div>
     <!-- /.container -->
-
-  
 
 {% endblock %}
