--- a/_base.html
+++ b/_base.html
@@ -9,8 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="Goryo">
-<title>Pelikula: Home Page
-</title>
+<title>{% block titlecontent %} {% endblock %}</title>
  
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width">
