--- a/admin.html
+++ b/admin.html
@@ -1,4 +1,5 @@
 {% extends "_base.html" %}
+{% block titlecontent %}Admin Page{% endblock %}
 {% block bodycontent %}  
 
  <!-- /.container -->
@@ -13,27 +14,7 @@
             </div>
 
         </div>
-<!--
-        <div class="row">
 
-            <div class="col-md-8">
-                <img class="img-responsive" src="http://placehold.it/750x500">
-            </div>
-
-            <div class="col-md-4">
-                <h3>Project Description</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
-                <h3>Project Details</h3>
-                <ul>
-                    <li>Lorem Ipsum</li>
-                    <li>Dolor Sit Amet</li>
-                    <li>Consectetur</li>
-                    <li>Adipiscing Elit</li>
-                </ul>
-            </div>
-
-        </div>
--->
         <div class="row">
 
             <div class="col-lg-12">
