added paging library

--- a/editentries.html
+++ b/editentries.html
@@ -1,5 +1,6 @@
-{% extends "_base.html" %} {% block titlecontent %}Admin: Edit Page{%
-endblock %} {% block bodycontent %}
+{% extends "_base.html" %} 
+{% block titlecontent %}Admin: Edit Page{%endblock %} 
+{% block bodycontent %}
 <!-- /.container -->
 <div class="container">
 	<div class="row">
@@ -36,10 +37,10 @@ endblock %} {% block bodycontent %}
 						<td>{{ mainentry.titulo }}</td>
 						<td>{{ mainentry.kategorya }}</td>
 						<td>{{ mainentry.letrato_link }}</td>
+            <td>{{ mainentry.letrato_link }}</td>
+            <td>{{ mainentry.letrato_link }}</td>
 					</tr>
 					{% endfor %}
-
-
 
 				</tbody>
 			</table>
