--- a/admin.html
+++ b/admin.html
@@ -15,7 +15,7 @@
 	<div class="col-lg-4">
 		<h2> Menu	<h2>
 			<h4 class="page-header"><a href="/admin">Add Entry</a></h4>
-			<h4 class="page-header"><a href="/editentries">View/Edit Entries</a></h4>
+			<h4 class="page-header"><a href="/editdeleteentries">Delete/Edit Entries</a></h4>
 		</div>
 
 		<div class="col-lg-8">
