--- a/editentries.html
+++ b/editentries.html
@@ -14,8 +14,8 @@
 		<h2>
 			Menu
 			<h2>
-				<h4 class="page-header">Add Entry</h4>
-				<h4 class="page-header">View/Edit Entries</h4>
+				<h4 class="page-header"><a href="/admin">Add Entry</a></h4>
+				<h4 class="page-header"><a href="/editdeleteentries">Delete/Edit Entries</a></h4>
 	</div>
 
 	<div class="col-lg-8">
@@ -37,8 +37,8 @@
 						<td>{{ mainentry.titulo }}</td>
 						<td>{{ mainentry.kategorya }}</td>
 						<td>{{ mainentry.letrato_link }}</td>
-            <td>{{ mainentry.letrato_link }}</td>
-            <td>{{ mainentry.letrato_link }}</td>
+			            <td><a href="/editmainentry?id={{mainentry.key()}}" class="btn">edit</a></td>
+			            <td><a href="/deletemainentry">delete</a></td>
 					</tr>
 					{% endfor %}
 
