--- a/editdeleteentries.html
+++ b/editdeleteentries.html
@@ -15,20 +15,31 @@
 	</div>
 
 	<div class="col-lg-8">
-		<form action="/editsingleentry" enctype="multipart/form-data" method="post">
-		   <input type="hidden" name="id" value="{{mainentry.key()}}" />
-		   <div><label>Titulo:</label><br /><input size="80" type="text" name="titulo" maxlength="200" value="{{mainentry.titulo}}" /></div>
-				<div><label>Kategorya:</label><br />
-					<select name="kategorya">	
-						<option value="pelikula" {% if mainentry.kategorya == "pelikula" %}selected="selected"{% endif %}>Pelikula</option>
-						<option value="palabas" {% if mainentry.kategorya == "palabas" %}selected="selected"{% endif %}>Palabas</option>
-						<option value="teleserye" {% if mainentry.kategorya == "teleserye" %}selected="selected"{% endif %}>Teleserye</option>
-					</select>
-				</div>
-				<div><label>Letrato Link:</label><br /><input type="text" name="letrato_link" maxlength="400" size="90" value="{{mainentry.letrato_link}}" /></div>
-				<br>
-		   <input type="submit" value="submit">
-   		</form>
+		<div class="table-responsive">
+			<table class="table table-striped table-bordered table-hover"
+				id="dataTables-example">
+				<thead>
+					<tr>
+						<th>Titulo</th>
+						<th>Kategorya</th>
+						<th>Letrato Link</th>
+					</tr>
+
+				</thead>
+				<tbody>
+					{% for mainentry in mainentries %}
+					<tr class="odd gradeX">
+						<td>{{ mainentry.titulo }}</td>
+						<td>{{ mainentry.kategorya }}</td>
+						<td>{{ mainentry.letrato_link }}</td>
+			            <td><a href="/editsingleentry?id={{mainentry.key()}}" class="btn">edit</a></td>
+			            <td><a href="/deletemainentry">delete</a></td>
+					</tr>
+					{% endfor %}
+
+				</tbody>
+			</table>
+		</div>
 	</div>
 	<!--
 <div class="row">
