--- a/_base.html
+++ b/_base.html
@@ -40,7 +40,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#"><img src="/img/malunggaypngtransbg50.png" />Start Bootstrap</a>
+                <a class="navbar-brand" href="#"><img src="/img/malunggaypngtransbg50.png" />Malunggay</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
