--- a/_base.html
+++ b/_base.html
@@ -40,10 +40,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#"><img src="/img/malunggaypngtransbg50.png" />Malunggay</a>
+                <a class="navbar-brand" href="/"><img src="/img/malunggaypngtransbg50.png" />Malunggay</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
+           <!--
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="#about">About</a>
@@ -53,6 +54,22 @@
                     <li><a href="#contact">Contact</a>
                     </li>
                 </ul>
+            </div>
+        -->
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+                {% set navigation_bar = [
+                ('/', 'index', 'Home'),
+                ('/downloads', 'downloads', 'Downloads'),
+                ('/about', 'about', 'About'),
+                ('/contact', 'contact', 'Contact')
+                ] -%}
+                {% set active_page = active_page|default('index') -%}
+
+                <ul class="nav navbar-nav" id="navigation">
+                {% for href, id, caption in navigation_bar %}
+                  <li{% if id == active_page %} class="active"{% endif
+                  %}><a href="{{ href|e }}">{{ caption|e }}</a></li>
+                {% endfor %}
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -84,5 +101,19 @@
     <script src="http://pretan-scious.codio.io:3000/assets/js/bootstrap.min.js"></script>
 <script src="http://pretan-scious.codio.io:3000/assets/js/main.js"></script>
 -->
+<script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+    var disqus_shortname = 'malunggaysandbox'; // required: replace example with your forum shortname
+    {% if mainentry is defined %}
+    var disqus_identifier = '{{ mainentry.key() }}'; 
+    {% endif %}
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function () {
+        var s = document.createElement('script'); s.async = true;
+        s.type = 'text/javascript';
+        s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+    }());
+</script>
 </body>
 </html>
