--- a/viewsingleentry.html
+++ b/viewsingleentry.html
@@ -23,7 +23,7 @@
             </div>
             <div class="col-md-1"></div>
             <div class="col-md-5">
-                <h3>What can you say after watching?</h3>    
+                <h3>Musta panood mo?</h3>    
                 <div id="disqus_thread"></div>
                     <script type="text/javascript">
                         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
