--- a/_base.html
+++ b/_base.html
@@ -58,10 +58,9 @@
         -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 {% set navigation_bar = [
-                ('/', 'index', 'Home'),
-                ('/downloads', 'downloads', 'Downloads'),
-                ('/about', 'about', 'About'),
-                ('/contact', 'contact', 'Contact')
+                ('/', 'index', 'Bahay'),
+                ('/browse', 'browse', 'Magbrowse'),
+                ('/about', 'about', 'Tungkol'),
                 ] -%}
                 {% set active_page = active_page|default('index') -%}
 
@@ -86,7 +85,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Company 2013</p>
+                    <p>Copyright &copy; Malunggaypy 2014</p>
                 </div>
             </div>
         </footer>
