--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <div class="row">
 
             <div class="col-lg-12">
-                <h1 class="page-header">Portfolio Item
-                    <small>Explain Your Work</small>
+                <h1 class="page-header">Malunggaypy
+                    <small>Usapang ng mga Paboritong Palabas at Pelikula</small>
                 </h1>
             </div>
 
