--- a/_base.html
+++ b/_base.html
@@ -81,7 +81,7 @@
         <div class="col-lg-3">  </div>
         <div class="col-lg-6">    
             <div class="input-group custom-search-form">
-                <input type="text" class="form-control" placeholder="Humanap...">
+                <input name="q" type="text" id="searchentries" class="form-control" placeholder="Maghanap...">
                
                 <span class="input-group-btn">
                     
