--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <div class="col-lg-12">
                 <h3 class="page-header">Mga huling Nakapaskil</h3>
             </div>
+           <!-- {{ test }} -->
 
         </div>
 <!--
