--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
             <div class="col-lg-12">
                 <h1 class="page-header">Malunggaypy
-                    <small>Usapang ng mga Paboritong Palabas at Pelikula</small>
+                    <small>Masarap na usapang ng mga Paboritong Palabas at Pelikula na binabalikbalikan</small>
                 </h1>
             </div>
 
