--- a/admin.html
+++ b/admin.html
@@ -27,6 +27,8 @@
 						<option value="pelikula" selected>Pelikula</option>
 						<option value="palabas">Palabas</option>
 						<option value="teleserye">Teleserye</option>
+            <option value="pinoyindie">Pinoy Indie</option>
+            <option value="koreanobela">Koreanobela</option>
 					</select>
 
 				</div>
