--- a/search.html
+++ b/search.html
@@ -2,6 +2,7 @@
 {% block titlecontent %}Search Page{% endblock %}
 {% block bodycontent %}  
 
+<!-- CSS improvement for Search entry results -->
  <!-- /.container -->
     <div class="container">
         
