--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 {% block titlecontent %}Home Page{% endblock %}
 {% block bodycontent %}  
 
- <!-- /.container -->
+ <!-- /.container qa-->
     <div class="container">
         
         <div class="row">
