--- a/browse.html
+++ b/browse.html
@@ -20,7 +20,7 @@
 
             <div class="col-md-4">
               <div class="pels">  
-              <a href="" class="cat_links">Pelikula</a>
+              <a href="/browse/pelikula" class="cat_links">Pelikula</a>
 
               </div>
             </div>
