--- a/browse.html
+++ b/browse.html
@@ -20,7 +20,7 @@
 
             <div class="col-md-4">
               <div class="pels">  
-              <a href="/browse/pelikula" class="cat_links">Pelikula</a>
+              <a href="/pelikula" class="cat_links">Pelikula</a>
 
               </div>
             </div>
@@ -29,14 +29,14 @@
             <div class="col-md-4">
               <div class="pels">  
                 
-              <a href="" class="cat_links">Series</a>
+              <a href="/series" class="cat_links">Series</a>
               </div>
 
             </div>
 
             <div class="col-md-4">
                <div class="pels"> 
-               <a href="" class="cat_links">Palabas</a>
+               <a href="/palabas" class="cat_links">Palabas</a>
 
                </div>
 
@@ -48,21 +48,21 @@
         <div class="row">
             <div class="col-md-4">
               <div class="pels">  
-              <a href="" class="cat_links">Teleserye</a>
+              <a href="/teleserye" class="cat_links">Teleserye</a>
 
               </div>
             </div>
 
             <div class="col-md-4">
               <div class="pels">  
-              <a href="" class="cat_links">Pinoy Indie</a>
+              <a href="/pinoyindie" class="cat_links">Pinoy Indie</a>
 
               </div>
             </div>
 
             <div class="col-md-4">
               <div class="pels">  
-              <a href="" class="cat_links">Koreanobela</a>
+              <a href="/koreanobela" class="cat_links">Koreanobela</a>
 
               </div>
             </div>
