--- a/admin.html
+++ b/admin.html
@@ -2,7 +2,6 @@
 {% block titlecontent %}Admin Page{% endblock %}
 {% block bodycontent %}  
 
-
 <!-- /.container -->
 <div class="container">
 	<div class="row">
@@ -27,8 +26,9 @@
 						<option value="pelikula" selected>Pelikula</option>
 						<option value="palabas">Palabas</option>
 						<option value="teleserye">Teleserye</option>
-            <option value="pinoyindie">Pinoy Indie</option>
-            <option value="koreanobela">Koreanobela</option>
+       			<option value="pinoyindie">Pinoy Indie</option>
+      			<option value="koreanobela">Koreanobela</option>
+            <option value="series">Series</option>
 					</select>
 
 				</div>
