--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="row">
 
             <div class="col-lg-12">
-                <h3 class="page-header">Mga huling Nakapaskil</h3>
+                <h3 class="page-header">Mga Nakapaskil</h3>
             </div>
            <!-- {{ test }} -->
 
