--- a/_base.html
+++ b/_base.html
@@ -63,9 +63,11 @@
                 {% set navigation_bar = [
                 ('/', 'index', 'Bahay'),
                 ('/browse', 'browse', 'Magbrowse'),
-                ('/about', 'about', 'Tungkol'),
+                
                 ] -%}
                 {% set active_page = active_page|default('index') -%}
+
+                <!-- ('/about', 'about', 'Tungkol'), -->
 
                 <ul class="nav navbar-nav" id="navigation">
                 {% for href, id, caption in navigation_bar %}
