--- a/browsepelikula.html
+++ b/browsepelikula.html
@@ -28,20 +28,18 @@
             </div>
             {% endfor %}
             
-
-            
         </div>
 
+        {% if nextqueryhascontents %}
         <div class="row">   
           <div class="col-lg-12">
-          {% if cursor %}
               <div class="paging">
                 <a href="javascript:history.back()">< Previous</a>
                 <a href="pelikula?cursor={{ cursor }}">Next ></a>
               </div>
-          {% endif %}
           </div>
         </div>
+        {% endif %}
                 <!--
         <div class="row">    
             {% for mainentry in mainentries %}
