--- a/browsepelikula.html
+++ b/browsepelikula.html
@@ -1,5 +1,5 @@
 {% extends "_base.html" %}
-{% block titlecontent %}Malunggay: Pelikula{% endblock %}
+{% block titlecontent %}Malunggaypy: Pelikula{% endblock %}
 {% block bodycontent %}  
 
  <!-- /.container qa-->
