--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <div class="row">
 
             <div class="col-lg-12">
-                <h1 class="page-header">Malunggaypy
-                    <small>Masarap na usapang ng mga Paboritong Palabas at Pelikula na binabalikbalikan</small>
+                <h1 class="page-header">Kwentuhan tayo!
+                    <small>Paboritong Palabas at Pelikula na masarap pag-usapan</small>
                 </h1>
             </div>
 
@@ -20,7 +20,6 @@
             <div class="col-lg-12">
                 <h3 class="page-header">Mga Nakapaskil</h3>
             </div>
-           <!-- {{ test }} -->
 
         </div>
 <!--
