--- a/browsepalabas.html
+++ b/browsepalabas.html
@@ -1,4 +1,5 @@
 {% extends "_base.html" %}
+{% block metadescription %}Malunggaypy{% endblock %}
 {% block titlecontent %}Malunggaypy: Palabas{% endblock %}
 {% block bodycontent %}  
 
