--- a/viewsingleentry.html
+++ b/viewsingleentry.html
@@ -27,7 +27,7 @@
                 <div id="disqus_thread"></div>
                     <script type="text/javascript">
                         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-                        var disqus_shortname = 'malunggaysandbox'; // malunggaypy, malunggaysandbox required: replace example with your forum shortname
+                        var disqus_shortname = 'malunggaypy'; // malunggaypy, malunggaysandbox required: replace example with your forum shortname
                         var disqus_identifier = '{{mainentry.key()}}';
 
                         /* * * DON'T EDIT BELOW THIS LINE * * */
