web site launched

--- a/editsingleentry.html
+++ b/editsingleentry.html
@@ -23,6 +23,7 @@
 						<option value="pelikula" {% if mainentry.kategorya == "pelikula" %}selected="selected"{% endif %}>Pelikula</option>
 						<option value="palabas" {% if mainentry.kategorya == "palabas" %}selected="selected"{% endif %}>Palabas</option>
 						<option value="teleserye" {% if mainentry.kategorya == "teleserye" %}selected="selected"{% endif %}>Teleserye</option>
+                 <option value="pinoyindie" {% if mainentry.kategorya == "pinoyindie" %}selected="selected"{% endif %}>Pinoy Indie</option>
 					</select>
 				</div>
 				<div><label>Letrato Link:</label><br /><input type="text" name="letrato_link" maxlength="400" size="90" value="{{mainentry.letrato_link}}" /></div>
