--- a/_base.html
+++ b/_base.html
@@ -116,9 +116,13 @@
 
         <footer>
             <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Malunggaypy 2014</p>
+                <div class="col-lg-8">
+                    <p>Copyright &copy; Malunggaypy 2014 </p>
                 </div>
+              <div class="col-lg-4">
+              <a href="https://twitter.com/malunggaypy" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @malunggaypy</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+              </div>
             </div>
         </footer>
 
@@ -164,7 +168,7 @@ $(function () {
   
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    var disqus_shortname = 'malunggaysandbox'; // required: replace example with your forum shortname
+    var disqus_shortname = 'malunggaypy'; // required: replace example with your forum shortname malunggaysandbox
     {% if mainentry is defined %}
     var disqus_identifier = '{{ mainentry.key() }}'; 
     {% endif %}
