--- a/admin.html
+++ b/admin.html
@@ -26,15 +26,18 @@
 						<option value="pelikula" selected>Pelikula</option>
 						<option value="palabas">Palabas</option>
 						<option value="teleserye">Teleserye</option>
-       			<option value="pinoyindie">Pinoy Indie</option>
-      			<option value="koreanobela">Koreanobela</option>
-            <option value="series">Series</option>
+                  <option value="pinoyindie">Pinoy Indie</option>
+                  <option value="koreanobela">Koreanobela</option>
+           			<option value="series">Series</option>
 					</select>
 
 				</div>
 
 				<div><label>Letrato Link:</label><br /><input type="text" name="letrato_link" maxlength="1000" size="90" /></div>
 				<br>
+           <label>Description:</label><br>
+           <textarea rows="4" cols="50" name="metadescription"></textarea>
+           	<br>
 				<input type="submit" value="submit">
 			</form>
 		</div>
