metadescription working and updated readme

--- a/viewsingleentry.html
+++ b/viewsingleentry.html
@@ -1,6 +1,8 @@
 {% extends "_base.html" %}
 {% block titlecontent %}Malunggay: {{mainentry.titulo}}{% endblock %}
+{% block metadescription %}{{mainentry.metadescription}}{% endblock %}
 {% block bodycontent %}  
+
 
  <!-- /.container -->
     <div class="container">
