--- a/viewsingleentry.html
+++ b/viewsingleentry.html
@@ -1,5 +1,5 @@
 {% extends "_base.html" %}
-{% block titlecontent %}Malunggay: {{mainentry.titulo}}{% endblock %}
+{% block titlecontent %}Malunggaypy: {{mainentry.titulo}}{% endblock %}
 {% block metadescription %}{{mainentry.metadescription}}{% endblock %}
 {% block bodycontent %}  
 
