update title tags

--- a/admin.html
+++ b/admin.html
@@ -29,6 +29,7 @@
                   <option value="pinoyindie">Pinoy Indie</option>
                   <option value="koreanobela">Koreanobela</option>
            			<option value="series">Series</option>
+                 <option value="series">Anime</option>
 					</select>
 
 				</div>
