--- a/browsepalabas.html
+++ b/browsepalabas.html
@@ -1,5 +1,5 @@
 {% extends "_base.html" %}
-{% block metadescription %}Malunggaypy{% endblock %}
+{% block metadescription %}Malunggaypy, Filipino TV Shows{% endblock %}
 {% block titlecontent %}Malunggaypy: Palabas{% endblock %}
 {% block bodycontent %}  
 
