--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 {% extends "_base.html" %}
-{% block titlecontent %}Home Page{% endblock %}
+{% block titlecontent %}Malunggaypy: Home Page{% endblock %}
 {% block bodycontent %}  
 
  <!-- /.container qa-->
