--- a/_base.html
+++ b/_base.html
@@ -7,7 +7,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="{% block metadescription %} {% endblock %}">
+    <meta name="description" content="Filipino favorite movies and shows, critics, {% block metadescription %} {% endblock %}">
     <meta name="author" content="Goryo">
 <title>{% block titlecontent %} {% endblock %}</title>
  
@@ -63,7 +63,8 @@
                 {% set navigation_bar = [
                 ('/', 'index', 'Bahay'),
                 ('/browse', 'browse', 'Magbrowse'),
-                
+                ('/about', 'tungkol', 'Tungkol'),
+              
                 ] -%}
                 {% set active_page = active_page|default('index') -%}
 
