--- a/browse.html
+++ b/browse.html
@@ -1,6 +1,6 @@
 {% extends "_base.html" %}
 {% set active_page = "browse" %}
-{% block titlecontent %}Magbrowse{% endblock %}
+{% block titlecontent %}Malunggaypy: Magbrowse{% endblock %}
 {% block bodycontent %}  
 
 
